--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="middle-container">
         <div class="profile">
-            <img class="hello" src="dp.jpg" alt="profile-image">
+            <img class="hello" src="FB_IMG_1564590714924.jpg" alt="profile-image">
             <h2>Hello.</h2>
             <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
         </div>
